--- a/css/top.css
+++ b/css/top.css
@@ -314,6 +314,7 @@
 
     .top main > section:nth-of-type(2) > article:nth-of-type(1) > section p {
         grid-area: c;
+        text-align: center;
     }
 
     /* INSPIRATION
