--- a/css/default.css
+++ b/css/default.css
@@ -125,6 +125,42 @@ a:is(:hover, :focus) {
     -webkit-text-fill-color: transparent;
 }
 
+/* intersection observer
+==================================================== */
+
+.fade-up {
+    opacity: 0;
+    transition: opacity 2s, transform 2s;
+    transform: translateY(50px);
+}
+
+.fade-up-active {
+    opacity: 1;
+    transform: translateY(0);
+}
+
+.fade-left {
+    opacity: 0;
+    transition: opacity 2s, transform 2s;
+    transform: translateX(-100px);
+}
+
+.fade-left-active {
+    opacity: 1;
+    transform: translateX(0);
+}
+
+.fade-right {
+    opacity: 0;
+    transition: opacity 2s, transform 2s;
+    transform: translateX(100px);
+}
+
+.fade-right-active {
+    opacity: 1;
+    transform: translateX(0);
+}
+
 /* ====================================================
 ** SITEWIDE
 ==================================================== */
